CSS Dark Mode accessibility fixes

--- a/src/app/global-dark.css
+++ b/src/app/global-dark.css
@@ -122,3 +122,13 @@ body.dark-mode {
 .dark-mode .row.sticky-header-dashboard .stat-box {
   background-color: #2c3e50;
 }
+
+.dark-mode .finished-drinks li span,
+.dark-mode .open-drink-item div span {
+  opacity: 1;
+}
+
+.dark-mode .open-drink-item div span.remove-link {
+  color: #ffdede;
+  text-decoration: underline;
+}
